--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
         <bootstrpfx.version>0.4.0</bootstrpfx.version>
         <l4j.version>2.20.0</l4j.version>
         <mockito.version>5.2.0</mockito.version>
+        <hibernate.version>5.6.0.Final</hibernate.version>
         <mariadb.version>3.1.2</mariadb.version>
         <sunfire.version>3.0.0</sunfire.version>
-        <jpa.version>1.0.1.Final</jpa.version>
 
     </properties>
 
@@ -79,12 +79,6 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>junit</groupId>-->
-<!--            <artifactId>junit</artifactId>-->
-<!--            <version>4.13.2</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -102,9 +96,34 @@
             <version>${l4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <version>${jpa.version}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+        <!--<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>2.20.0</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
@@ -127,6 +146,7 @@
                 <configuration>
                     <source>19</source>
                     <target>19</target>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
