--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
                 <version>3.0.0</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+            </plugin>
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
@@ -143,7 +148,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>travel.travelagency/travel.travelagency.HelloApplication</mainClass>
+                            <mainClass>travel.travelagency/travel.travelagency.TravelAgencyServiceApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
@@ -156,4 +161,10 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>travel</id>
+            <url>https://github.com/florivz/travel-agency-service</url>
+        </repository>
+    </distributionManagement>
 </project>
